--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <script src="https://www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
 
     <style>
+        /* 🛡️ SECCIÓN 1: DISEÑO BLINDADO */
         :root { --gold: #a68a44; --bg: #050505; --card: #121212; }
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         html, body { margin: 0; background: var(--bg); color: #ffffff; font-family: 'Plus Jakarta Sans', sans-serif; min-height: 100vh; overflow-y: auto !important; }
         
-        /* LOGIN */
         #login-screen { position: fixed; inset: 0; background: black; z-index: 5000; display: flex; align-items: center; justify-content: center; }
         .login-card { width: 85%; max-width: 320px; text-align: center; background: #111; padding: 40px 30px; border-radius: 25px; border: 1px solid #222; }
         .login-card input { width: 100%; padding: 15px; margin-bottom: 25px; background: #222; border: 1px solid var(--gold); color: white; border-radius: 12px; text-align: center; font-size: 16px; }
@@ -27,7 +27,6 @@
 
         .container { max-width: 450px; margin: auto; padding: 15px; padding-bottom: 300px; }
 
-        /* CANALES */
         .channels-container { display: grid !important; grid-template-columns: repeat(5, 1fr) !important; gap: 5px; margin-bottom: 25px; padding: 10px 0; }
         .channel-item { display: flex; flex-direction: column; align-items: center; text-align: center; opacity: 0.9; cursor: pointer; }
         .channel-logo { width: 44px; height: 44px; border-radius: 12px; border: 2.5px solid #222; margin-bottom: 6px; background: #000; object-fit: contain; }
@@ -47,7 +46,7 @@
         .btn-ver-playlist { background: #1a1a1a !important; border: 1.5px solid #333 !important; color: #ffffff !important; padding: 12px !important; border-radius: 12px !important; font-size: 11px !important; font-weight: 800 !important; cursor: pointer !important; width: 100% !important; text-transform: uppercase !important; }
         .playlist-box { display: none; margin-top: 15px; padding: 20px; background: #080808; border-radius: 15px; border: 1px solid #222; font-size: 14px; color: #ffffff; line-height: 1.8; white-space: pre-wrap; }
 
-        /* PLAYER */
+        /* REPRODUCTOR */
         #global-player { position: fixed; bottom: 0; left: 0; width: 100%; background: #080808; border-top: 3px solid var(--gold); padding: 15px 20px; display: none; z-index: 1000; }
         .p-vinyl { width: 55px; height: 55px; border-radius: 50%; border: 2.5px solid var(--gold); background-size: cover; animation: rotateVinyl 4s linear infinite; animation-play-state: paused; }
         .playing .p-vinyl { animation-play-state: running; }
@@ -135,7 +134,7 @@
     const playSVG = `<svg viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>`;
     const pauseSVG = `<svg viewBox="0 0 24 24"><path d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"/></svg>`;
 
-    // 🛡️ LÓGICA CAST DENTRO DEL MÓDULO PARA EVITAR ERRORES DE COMPILACIÓN
+    // 🛡️ LOGICA CAST (ADENTRO DEL MÓDULO PARA EVITAR LA X)
     window['__onGCastApiAvailable'] = function(isAvailable) {
         if (isAvailable) {
             const castContext = cast.framework.CastContext.getInstance();
@@ -165,10 +164,10 @@
 
     window.checkLogin = () => {
         const p = document.getElementById('passInput').value.toLowerCase().trim();
-        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v84', 'true'); location.reload(); }
+        if(p === "ticoadmin" || p === "jazz2026") { localStorage.setItem('jtp_auth_v85', 'true'); location.reload(); }
         else { alert("Clave Incorrecta"); }
     };
-    if(localStorage.getItem('jtp_auth_v84')) {
+    if(localStorage.getItem('jtp_auth_v85')) {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('app-content').style.display = 'block';
         isAdmin = true;
@@ -177,10 +176,7 @@
     window.salirTotal = () => { localStorage.clear(); location.reload(); };
 
     document.getElementById('admin-trigger').onclick = () => {
-        if(isAdmin) {
-            const panel = document.getElementById('admin-panel');
-            panel.style.display = (panel.style.display === 'none') ? 'block' : 'none';
-        }
+        if(isAdmin) document.getElementById('admin-panel').style.display = 'block';
     };
 
     window.cancelarEdicion = () => { document.getElementById('admin-panel').style.display = 'none'; document.getElementById('edit-id').value = ""; };
@@ -201,7 +197,7 @@
         programas = []; snap.forEach(d => programas.push({id: d.id, ...d.data()})); render();
     });
 
-    window.borrarDoc = async (id) => { if(confirm("¿Borrar definitivamente?")) await deleteDoc(doc(db, "radio_programas", id)); };
+    window.borrarDoc = async (id) => { if(confirm("¿Borrar?")) await deleteDoc(doc(db, "radio_programas", id)); };
 
     window.prepararEdicion = (id) => {
         const p = programas.find(x => x.id === id);
@@ -233,7 +229,7 @@
                     <span style="color:var(--gold); font-size:9px; font-weight:900; text-transform:uppercase;">${p.programa}</span>
                     <h3 class="episode-title">${p.titulo}</h3>
                     <button class="btn-ver-playlist" onclick="window.togglePlaylist('${p.id}')">📋 VER PROGRAMACIÓN</button>
-                    <div id="list-${p.id}" class="playlist-box">${p.playlist || "Próximamente."}</div>
+                    <div id="list-${p.id}" class="playlist-box">${p.playlist || "Detalles pronto."}</div>
                     ${isAdmin ? `<div class="dj-actions" style="display:flex; gap:10px; margin-top:20px; border-top:1px solid #222; padding-top:20px;">
                         <button class="btn-dj-edit" onclick="window.prepararEdicion('${p.id}')" style="background:transparent; border:1.5px solid var(--gold); color:var(--gold); flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🖋️ EDITAR</button>
                         <button class="btn-dj-del" onclick="window.borrarDoc('${p.id}')" style="background:transparent; border:1.5px solid #ff4444; color:#ff4444; flex:1; padding:10px; border-radius:10px; font-size:9px; font-weight:800; cursor:pointer;">🗑️ BORRAR</button>
@@ -252,7 +248,7 @@
 
     window.togglePlay = () => { if(media.paused) media.play(); else media.pause(); render(); };
     window.cerrarPlayer = () => { media.pause(); document.getElementById('global-player').style.display='none'; idActual=null; render(); };
-    window.togglePlaylist = (id) => { const el = document.getElementById(`list-${id}`); el.style.display = el.style.display === 'block' ? 'none' : 'block'; };
+    window.togglePlaylist = (id) => { const el = document.getElementById(`list-${id}`); el.style.display = (el.style.display === 'block') ? 'none' : 'block'; };
     window.cambiarVelocidad = () => { const s = [1.0, 1.25, 1.5, 2.0]; media.playbackRate = s[(s.indexOf(media.playbackRate)+1)%s.length]; document.getElementById('btn-speed').innerText = media.playbackRate+"x"; };
     window.toggleMute = () => { media.muted = !media.muted; document.getElementById('btn-mute').innerText = media.muted ? "🔇 MUTE" : "🔊 VOL"; };
 
