--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Jazztabueno Productions V3.4</title>
+    <title>Jazztabueno Productions V3.5</title>
     <link rel="icon" type="image/png" href="logo.png">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -11,7 +11,6 @@
         * { box-sizing: border-box; }
         body { margin: 0; background: var(--bg); color: #e0e0e0; font-family: 'Source Sans Pro', sans-serif; overflow-x: hidden; }
         
-        /* LOGIN */
         #login-screen { position: fixed; inset: 0; background: black; z-index: 5000; display: flex; align-items: center; justify-content: center; }
         .login-card { width: 85%; max-width: 320px; text-align: center; background: #0a0a0a; padding: 40px 30px; border-radius: 20px; border: 2px solid var(--gold); }
         .input-box { width: 100%; padding: 12px; margin: 20px 0 10px 0; background: #000; border: 1px solid #333; color: white; border-radius: 8px; text-align: center; font-size: 16px; }
@@ -23,8 +22,8 @@
         .container { max-width: 500px; margin: auto; padding: 20px; padding-bottom: 120px; }
         .track-card { background: var(--card); border-radius: 12px; margin-bottom: 15px; padding: 15px; display: flex; align-items: center; border: 1px solid #222; }
         .track-img { width: 65px; height: 65px; border-radius: 8px; object-fit: cover; margin-right: 15px; }
-        .track-info { flex: 1; }
-        .track-title { font-size: 15px; font-weight: 700; color: #fff; margin: 0; }
+        .track-info { flex: 1; overflow: hidden; }
+        .track-title { font-size: 15px; font-weight: 700; color: #fff; margin: 0; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
         
         .btn-play { background: var(--gold); border: none; width: 40px; height: 40px; border-radius: 50%; cursor: pointer; display: flex; align-items: center; justify-content: center; }
         #player-bar { position: fixed; bottom: 0; width: 100%; background: #000; border-top: 2px solid var(--gold); padding: 15px; display: none; z-index: 1000; }
@@ -35,14 +34,14 @@
 
 <div id="login-screen">
     <div class="login-card">
-        <h2 style="color:var(--gold); margin:0; font-size: 18px;">CONSOLA JAZZ V3.4</h2>
+        <h2 style="color:var(--gold); margin:0; font-size: 18px;">CONSOLA JAZZ V3.5</h2>
         <input type="password" id="passInput" class="input-box" placeholder="Introduce tu clave">
         <button onclick="doLogin()" style="width:100%; background:var(--gold); color:black; padding:12px; border:none; border-radius:8px; font-weight:800; cursor:pointer;">ENTRAR</button>
     </div>
 </div>
 
 <header>
-    <img src="logo.png" class="logo-img" id="admin-trigger">
+    <img src="logo.png" class="logo-img">
     <h1>JAZZTABUENO PRODUCTIONS</h1>
 </header>
 
@@ -73,11 +72,12 @@
     const app = initializeApp(firebaseConfig);
     const db = initializeFirestore(app, { experimentalForceLongPolling: true });
 
-    let userRole = null; // 'admin' o 'user'
+    let userRole = null;
 
     window.doLogin = () => {
         const pass = document.getElementById('passInput').value;
-        if(pass === "yajuadmin2026") {
+        // USAMOS TUS CLAVES REALES
+        if(pass === "ticoadmin") {
             userRole = 'admin';
             document.getElementById('login-screen').style.display = 'none';
             iniciarApp();
@@ -101,7 +101,7 @@
         };
 
         window.borrarDoc = async (id) => {
-            if(confirm("¿Seguro que quieres borrar este programa?")) {
+            if(confirm("¿Borrar este programa?")) {
                 await deleteDoc(doc(db, "canciones", id));
             }
         };
